# Playground

./: MCP_Server_Demo.md  README.md  SQLCipher_Windows.md  go.mod  go.sum  hub.go  latest_version.json  main.go
LiveRecording/: README.md
LiveRecording/live_client/: Cargo.toml  README.md  build.rs  demo.html  live_push.lib
LiveRecording/live_client/src/: capture.rs  encode.rs  main.rs
LiveRecording/live_push/: .gitignore  ConvertScale.cpp  ConvertScale.h  DXGICapture.cpp  DXGICapture.h  H264NVENCEncoder.cpp  H264NVENCEncoder.h  live_push.cpp  live_push.h  live_push.sln  live_push.vcxproj
LiveRecording/live_push/ffmpeg/: README.md
asset/: vr-game-launcher_1.3.31_x64_en-US.msi.zip.sig
chat_room/: client.go  go.mod  go.sum  hub.go  main.go
chat_room/chat-room-ui/: .env.development  .prettierrc  next.config.mjs  package-lock.json  package.json
chat_room/chat-room-ui/src/app/: layout.tsx
chat_room/chat-room-ui/src/pages/: _app.tsx  index.tsx
chat_room/chat-room-ui/src/pages/[speaker]/: Loading.tsx  index.tsx
chat_room/chat-room-ui/src/pages/port/: index.tsx
chat_room/chat-room-ui/src/redux/: store.ts
chat_room/chat-room-ui/src/utils/: index.ts  websocket.ts
chat_room/chat_room_services/: client.go  go.mod  go.sum  hub.go  main.go
chat_room/chat_room_services/utils/: crypto.go  snowflake.go
handler/: handler.go  latest_version.go
object-3d-test/: .prettierignore  package-lock.json  package.json
object-3d-test/src/: App.tsx  index.tsx
object-3d-test/src/canvas/: Box.tsx  ObjectCanvas.tsx
sky-vista/: .prettierignore  README.md  package-lock.json  package.json
sky-vista/public/: index.html
sky-vista/src/: App.tsx  index.css  index.tsx
sky-vista/src-tauri/: Cargo.toml  tauri.conf.json
sky-vista/src-tauri/icons/: icon.icns
sky-vista/src-tauri/src/: main.rs
sky-vista/src-tauri/src/ui/: mod.rs
(+3 files in other folders)
