[package]
name = "live_client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.3"
futures-util = "0.3.30"
libc = "0.2.155"
image = "0.25.1"
log = "0.4.21"
once_cell = "1.19.0"
openh264 = "0.6.0"
scrap = "0.5.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "*"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]