[package]
name = "app"
version = "0.1.0"
description = "A desktop widget that displays images and time"
authors = ["Jake(Yingjie) Chen"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.19.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ 
    "window-minimize", 
    "window-start-dragging", 
    "window-set-always-on-top", 
    "system-tray"
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
